# starting-ragchatbot-codebase

./: .env.example  CLAUDE.md  DEVELOPMENT.md  MIGRATION_SUMMARY.md  README.md  check-quality.sh  format.sh  frontend-changes.md  pyproject.toml  run.sh  test_migration.py
.claude/commands/: implement-feature.md
.github/workflows/: claude-code-review.yml  claude.yml
backend/: TEST_CASE_REMOVAL_ANALYSIS.md  TEST_FAILURE_ANALYSIS.md  TEST_FIXES_ANALYSIS.md  TEST_REPORT.md  ai_generator.py  app.py  config.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  run_all_tests.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py  test_sequential_tool_calling.py
backend/tests/integration/: test_chroma_integration.py  test_document_processing.py  test_end_to_end.py  test_real_api_integration.py  test_session_management.py
backend/tests/mocks/: __init__.py  mock_ai_api.py  mock_ai_api_enhanced.py  mock_document_processor.py  mock_models.py  mock_openai.py  mock_session_manager.py  mock_vector_store.py  mock_vector_store_module.py
backend/tests/unit/: test_edge_cases.py
chroma_db/: chroma.sqlite3
frontend/: index.html  script.js  style.css
